update bio + add STOCKBLASTER

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,8 @@
     </p>
       
     <p>
-    Hello! I'm Nolan, an engineer living in Reno, NV.
-    I work for <a href='http://originmaterials.com/'>Origin Materials</a>,
-    a chemical R&amp;D and manufacturing startup in West Sacramento.
+    Hello! I'm Nolan, a software developer.
+    I work for Everi, at a casino gaming studio in Reno, NV.
     </p>
 
     <p>
@@ -25,6 +24,9 @@
 
     <p>
     <ul>
+        <li>
+            2020-04-12 - <a href="stockblaster/index.html">Game: STOCKBLASTER</a>
+        </li>
         <li>
             2019-12-16 - <a href="latency.html">Exploring "Negative Latency"</a>
         </li>
