--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,7 +44,7 @@ a:active {
     color: #fc571b;
 }
 
-h1 {
+.name {
     font-weight: bold;
     font-size: 2em;
     margin-bottom: 0;
@@ -52,7 +52,7 @@ h1 {
 }
 
 @media (min-width: 768px) {
-    h1 {
+    .name {
         text-align: left;
         font-size: 2.5em;
     }
@@ -65,6 +65,15 @@ h1 {
 .name a:hover {
     color: #555555;
 }
+
+.page-title {
+    font-size: 2em;
+}
+
+h1 { font-size: 1.5em; }
+h2 { font-size: 1.25em; }
+h3 { font-size: 1.10em; }
+h3 { font-size: 1.0em; }
 
 .codeholder {
     display: block;
@@ -100,4 +109,8 @@ h1 {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.article-banner {
+    max-width: 100%;
 }
