--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,46 @@
 ---
-layout: old-base
 ---
 
-{{ content }}
+<!DOCTYPE html>
+<html>
+
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146424119-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-146424119-1');
+    </script>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{ page.title }} - Nolan Nicholson</title>
+    <link rel="stylesheet" type="text/css" href="/assets/css/highlighting.css">
+    <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700'>
+    <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+</head>
+
+<body>
+    <div id='name-banner'>
+        <h1 class='name'>
+            <a href="/">Nolan Nicholson</a>
+            
+            <!--Code for adding a spinning cube to the header-->
+            <div id="headercanvas-holder">
+                <canvas id="headercanvas"></canvas>
+            </div>
+            <script src="/assets/js/libraries/gl-matrix.js"></script>
+            <script src="/assets/js/headercube.js"></script>
+            <!--end spinning cube code-->
+        </h1>
+    </div>
+    {{ content }}
+    <hr>
+    <p>
+        <a href="/">Home</a>
+    </p>
+</body>
+</html>
