--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,14 +46,16 @@ a:active {
 
 .name {
     font-weight: bold;
-    font-size: 2em;
+    font-size: 1.25em;
     margin-bottom: 0;
-    text-align: center;
+}
+
+.name-big {
+    font-size: 2em;
 }
 
 @media (min-width: 768px) {
-    .name {
-        text-align: left;
+    .name-big {
         font-size: 2.5em;
     }
 }
