remove external dependencies

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@
 body {
     margin-left: 1em;
     margin-right: 1em;
-    font-family: 'Roboto Slab', serif;
+    font-family: sans-serif;
     font-weight: normal;
     font-size: 1.2em;
     color: #333333;
