--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,12 @@
     <title>{{ page.title }} - Nolan Nicholson</title>
     <link rel="stylesheet" type="text/css" href="/assets/css/highlighting.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+
+    <!-- favicons -->
+    <link rel="icon" href="/favicon.ico" sizes="48x48" >
+    <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png"/>
+    <link rel="manifest" href="/site.webmanifest" />
 </head>
 
 <body>
